search errors work for title & creator

--- a/LibraryService-Frontend/src/components/styling.css
+++ b/LibraryService-Frontend/src/components/styling.css
@@ -14,7 +14,7 @@
  #reserve{
    font-family: 'Avenir', Helvetica, Arial, sans-serif;
    font-size: 30px;
-   background: #ffffff;
+   background: #97C3F9;
  }
  #transaction {
    font-family: 'Avenir', Helvetica, Arial, sans-serif;
