--- a/LibraryService-Frontend/src/components/styling.css
+++ b/LibraryService-Frontend/src/components/styling.css
@@ -4,6 +4,9 @@
     color: #2c3e50;
     background: #97C3F9;
 }
+#results{
+    background: #97C3F9;
+}
 #invalidInput {
    font-family: 'Avenir', Helvetica, Arial, serif;
    font-size: 24px;
@@ -14,7 +17,7 @@
  #reserve{
    font-family: 'Avenir', Helvetica, Arial, sans-serif;
    font-size: 30px;
-   background: #97C3F9;
+   background: #FFFFFF;
  }
  #transaction {
    font-family: 'Avenir', Helvetica, Arial, sans-serif;
