--- a/LibraryService-Frontend/src/components/styling.css
+++ b/LibraryService-Frontend/src/components/styling.css
@@ -7,21 +7,18 @@
 #results{
     background: #97C3F9;
 }
+#list-group{
+  background: #97C3F9;
+}
 #invalidInput {
    font-family: 'Avenir', Helvetica, Arial, serif;
    font-size: 24px;
    font-style: italic;
    color: #0E0E47;
-   background: #97C3F9;
+   background: #ffffff;
  }
  #reserve{
    font-family: 'Avenir', Helvetica, Arial, sans-serif;
    font-size: 30px;
    background: #FFFFFF;
- }
- #transaction {
-   font-family: 'Avenir', Helvetica, Arial, sans-serif;
-   font-size: 30px;
-   color: #2c3e50;
-   background: #97C3F9;
  }
