--- a/LibraryService-Frontend/src/components/styling.css
+++ b/LibraryService-Frontend/src/components/styling.css
@@ -1,3 +1,7 @@
+#Login{
+  background: #97C3F9;
+  color: #2c3e50;
+}
 #search {
     font-family: 'Avenir', Helvetica, Arial, sans-serif;
     font-size: 20px;
@@ -22,3 +26,6 @@
    font-size: 30px;
    background: #FFFFFF;
  }
+ #info{
+  background-color: #97C3F9;
+}
